# lib_MVC_Hero

05_app_mvc_generics/: app.db  main.py
05_app_mvc_generics/controller/: generic.py  hero.py  team.py
05_app_mvc_generics/model/: dto.py  models.py
05_app_mvc_generics/repository/: base.py
05_app_mvc_generics/service/: base.py
05_app_mvc_generics/util/: database.py  memory_database.py
hero_mvc_vivian/: pyproject.toml
hero_mvc_vivian/hero_mvc_vivian/: main.py
hero_mvc_vivian/hero_mvc_vivian/controller/: hero_controller.py
hero_mvc_vivian/hero_mvc_vivian/model/: hero_model.py
hero_mvc_vivian/hero_mvc_vivian/repository/: hero_repository.py
hero_mvc_vivian/hero_mvc_vivian/util/: memory_database.py
